--- a/style.css
+++ b/style.css
@@ -751,6 +751,11 @@ p {
     border-radius: 50%;
     margin: 5px 8px;
   }
+  .textcolumn {
+    text-align: left;
+    display: block;
+    gap: 2vw;
+  }
 
   /* 滾動效果 */
   @keyframes scroll-loop {
