--- a/font.css
+++ b/font.css
@@ -118,3 +118,35 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "PicNic";
+  src: url("font/PicNic.woff2") format("woff2"),
+    url("font/PicNic.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "fungal";
+  src: url("font/Fungal-Grow0Thickness500.woff2") format("woff2"),
+    url("font/Fungal-Grow0Thickness500.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "fungal-grow";
+  src: url("font/Fungal-Grow100Thickness500.woff2") format("woff2"),
+    url("font/Fungal-Grow100Thickness500.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "fungal-grow400";
+  src: url("font/Fungal-Grow800Thickness500.woff2") format("woff2"),
+    url("font/Fungal-Grow800Thickness500.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
